# grant-manager-tool-demo

./: .gitignore  AGENTS.md  AGENTS_AUTOMATION.md  Dockerfile  Dockerfile.worker  Dockerfile.wrangler  Makefile  PROMPT.md  README.md  README_wrangle_grants.md  cli.js  docker-compose.yml  package-lock.json  package.json  program_scoring.py  pyproject.toml  requirements.txt  search_grants.py  visualize_grants_web.py  worker.js  wrangle_api.py  wrangle_grants.py  wrangle_grants_gui.py  wrangler.jsonc  wrangler.toml
agents-starter-1/: package-lock.json  package.json  wrangler.jsonc
data/: programs.csv
data/csvs/: grants_cgp_energy.csv  grants_cgp_training.tsv  grants_filtered-2.csv  (+135 more)
docs/: DEVELOPERS.md  README.md  consulting_setup.md  data_contract.json  pipeline_vs_direct_write.md
examples/: docker-compose.yml  programs.csv  wrangle_api_client.html  wrangle_config.json  wrangle_config.yaml
grant_summarizer/: README.md  pyproject.toml
grant_summarizer/grant_summarizer/: __init__.py  cli.py  extract.py  grants_api.py  normalize.py  rules.py  schema.py  summarize.py  utils.py
grant_summarizer/tests/: conftest.py  test_cli.py  test_extract.py  test_grants_api.py  test_normalize.py  test_search_grants.py  test_summarize.py
in/: grants.csv
scripts/: make_onepager.py
templates/: dashboard.js  login.js  profile.js  test_endpoints.js
tests/: test_wrangle_grants.py
ui/: ScoringTable.jsx  dashboard.js  login.js
worker/: README_WORKER.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
workers/: program_watcher_worker.js  soc_pipeline_worker.js
(+9 files in other folders)
