[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grant-manager-tool-demo"
version = "0.1.0"
description = "Utility tools for wrangling and visualizing grant data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "openpyxl",
    "flask",
    "plotly",
]

[project.scripts]
wrangle-grants = "wrangle_grants:main"
search-grants = "search_grants:main"
