[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grant_summarizer"
version = "0.1.0"
dependencies = [
  "typer",
  "pdfminer.six",
  "pydantic",
]

[project.scripts]
grant-summarizer = "grant_summarizer.cli:main"

[project.optional-dependencies]
test = ["pytest"]
